-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.5
-
None
-
Ubuntu 22.04
Wayland disabled (with Wayland I am unable to share my screen in Teams)
-
-
f5cbd716268f5521b5f52868713ed93f8aef0554, f7519a89d (dev), 351653994 (6.6), 89484d934 (6.5), 2e90c5fc6 (6.5.3), a6a95420b (qt-creator 12.0)
6.5 desktop kit isn't able to run many examples / demos from the welcome screen.
6.4 works fine.
Affected tried demos:
qmlsurface, texturesurface, opcuaviewer
Each shows the same crash, when trying to run the app.
12:23:16: Starting /home/william/Qt/Examples/Qt-6.5.0/opcua/build-opcuaviewer-Desktop_Qt_6_5_0_GCC_64bit-Debug/opcuaviewer...
qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "" even though it was found.
This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.
Available platform plugins are: offscreen, xcb, vnc, minimal, minimalegl, wayland, wayland-egl, vkkhrdisplay, linuxfb, eglfs.
12:23:16: /home/william/Qt/Examples/Qt-6.5.0/opcua/build-opcuaviewer-Desktop_Qt_6_5_0_GCC_64bit-Debug/opcuaviewer crashed.
- duplicates
-
QTBUG-113799 [X11] Could not run any Qt application on Xorg linux because of missing plugin "xcb"
-
- Closed
-
-
QDS-9497 Linux: "Cannot Connect to QML Emulation Layer" error with Qt6 projects
-
- Closed
-
-
QTBUG-128315 Include libxcb-cursor in standard install
-
- Closed
-
- is duplicated by
-
QTCREATORBUG-29548 Crash starting tamplate application (Qt 6.5.2)
-
- Closed
-
-
QTCREATORBUG-29873 Qt creator fails to start on debian bookworm
-
- Closed
-
-
QTCREATORBUG-29995 QtCreator 12 fails to open on Ubuntu 23.10 and 20.04 due to missing system library libxcb-cursor.so.0
-
- Closed
-
-
QTBUG-112185 qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "" even though it was found.
-
- Closed
-
- relates to
-
QTBUG-84749 QT applications fail to run if xcb_xinerama (or other xcb libraries) is not installed
-
- Closed
-
-
QTCREATORBUG-30004 Show a message box if Qt Creator can't start due to missing dependencies of libxcb.so
-
- Closed
-
For Gerrit Dashboard: QTBUG-108796 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
503115,3 | GUI: give more warning when can't load xcb since 6.5.0 | dev | qt/qtbase | Status: MERGED | +2 | 0 |
504109,2 | GUI: give more warning when can't load xcb since 6.5.0 | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
504153,2 | GUI: give more warning when can't load xcb since 6.5.0 | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
504179,3 | GUI: give more warning when can't load xcb since 6.5.0 | 6.5.3 | qt/qtbase | Status: MERGED | +2 | 0 |
523043,6 | Main: Show a GUI message if platform plugin fails to load | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |