GUI: give more warning when can't load xcb since 6.5.0

normally because new depedency of xcb-cursor0 or libxcb-cursor0 is
missing.

Task-number: QTBUG-108796
Change-Id: I040e9c0932bbf1f9026b365ded462c7373b219b5
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit f7519a89d27de7e473bb864cb377aa679c619c0c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 3516539945ce73437dd17f769902d85955dae6ed)